--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ h1 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .restart {
@@ -98,4 +99,12 @@ h1 {
   text-align: center;
   margin: 2rem 0rem;
   font-size: 2rem;
+}
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 3.5rem;
+    top: 70%;
+    transform: translate(-50%, -70%);
+  }
 }
